examples/modules/negative/example_five.compact
// This file is part of Compact.
// Copyright (C) 2025 Midnight Foundation
// SPDX-License-Identifier: Apache-2.0
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//  	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

module Test2a {
  export ledger var_test2a: Boolean;

  export circuit test2a(var2: Boolean): Boolean {
    var_test2a = disclose(var2);
    return var2;
  }
}

module Test2b {
  export ledger var_test2b: Boolean;

  export circuit test2b(var2: Boolean): Boolean {
    var_test2b = disclose(var2);
    return var2;
  }
}

import { var as sth } from NonExistingModule;